@@ -1,3 +1,10 @@
+2010-09-10  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/Module.h : added class_Base::property_names method
+	to grab the names of all fields (properties)
+	* src/Module.cpp : added R access (.Call) function CppClass__properties 
+	to grab the names of the fields (property) from the XP of a class
+
 2010-09-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/examples/ConvolveBenchmarks/exampleRCode.r: Rewritten /
